# SR8_Python_Compiler_v1

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  sr8_v1_compiler_first_run.txt
.codex/: config.toml
.codex/skills/wf11-gap-closure/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs-check.yml  frontend-ci.yml  hygiene.yml  release.yml  reusable-build.yml  reusable-test.yml
.sr8/artifacts/canonical/: art_01cc8a598120973536a4.json  art_a73fbd6c7f83ea98379f.json  art_a73fbd6c7f83ea98379f_1.json  art_ac723606653dd5513a5a.json  art_ac723606653dd5513a5a_1.json
.sr8/artifacts/derivative/: drv_0322c35a1f1d356db82e.json  drv_0322c35a1f1d356db82e.md  drv_1c17355736457af2a825.json  drv_1c17355736457af2a825_1.json  drv_513c29b8343b2a14d7f5.json  drv_513c29b8343b2a14d7f5_1.json  latest.md
.sr8/index/: catalog.json
.sr8/receipts/compile/: crpt_522f9e9829ee85744955.json  crpt_5930ceff401284ae9299.json  crpt_7fa3e92a04a817ac9efe.json  crpt_cf6e0bb4a42e06e1e59b.json  crpt_d295ef675fdd25cfa31f.json
.sr8/receipts/transform/: trpt_0880e7a063b9bcec3c6f.json  trpt_1baad2d59c45f3a14173.json  trpt_501f259a3ced37c27a4f.json  trpt_c5c3cb3f9422c0905516.json  trpt_d5d2221d3c2f43d21085.json
artifacts/: drv_4f623db770202d422311.md  drv_661d086985f8fa402be8.md  drv_fb467e5b0a6c754f26e1.md  latest.json  latest.yaml  latest_transform.md
assets/badges/: README_BADGES.md
assets/release/: feature-matrix.md  first-release-notes.md  install-snippets.md  release-summary.md
assets/social/: github-release-card.md
benchmarks/corpus/founder/: founder_launch.case.json  founder_launch_brief.md
benchmarks/corpus/procedure/: incident_rollback_procedure.md  procedure_rollback.case.json
benchmarks/corpus/repo/: repo_task_graph.case.json  repo_task_graph_request.md
benchmarks/corpus/research/: research_outline.case.json  research_outline_request.md
benchmarks/corpus/self_hosting/: sr8_artifact_eval.case.json  sr8_recompile_whitepaper.case.json  sr8_release_artifact.json  sr8_release_proof.md  sr8_release_transform.case.json  wf12_workflow_spec.txt  (+1 more)
benchmarks/expected/: founder_launch.json  procedure_rollback.json  repo_task_graph.json  research_outline.json  sr8_artifact_eval.json  sr8_recompile_whitepaper.json  sr8_release_transform.json  sr8_workflow_compile.json  weak_contradictory.json
benchmarks/results/: all.md  latest.json  self_hosting.json  self_hosting.md
benchmarks/rubrics/: default.json
docs/: SR8_DeepSeek_Sovereign_Standard_Stress_Test_Report.md  SR8_Template_Hardening_Report_DeepSeek.md  TRUTH_BOUNDARY.md  V1_PROOF_GUIDE.md  V1_RELEASE_SCOPE.md  api-security.md  artifact-schema.md  bedrock-setup.md  benchmarking.md  breadth-registries.md  chat-frontdoor.md  ci-and-quality-gates.md  cli-reference.md  concepts.md  development.md  diff-and-lint.md  evaluation-rubrics.md  examples.md  extraction-trust.md  frontend.md  gap_matrix.json  getting-started.md  index.md  install.md  installation.md  labels.md  llm-adapters.md  local-ui.md  model-assisted-mode.md  oss-chat-compiler-integration.md  oss-launch.md  overview.md  post-launch-ops.md  profile-authoring.md  profiles.md  provider-capabilities.md  providers.md  public-api-exposure.md  python-api.md  quickstart.md  (+14 more)
examples/: founder_ask.md  messy_intent.md  product_prd.md  repo_audit.md
examples/outputs/: art_01cc8a598120973536a4.json  canonical_generic.json  canonical_prd.json  canonical_repo_audit.json  diff_summary.txt  latest.json  lint_report.txt  markdown_plan.md  markdown_prd.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: app.css  app.d.ts  svelte-shims.d.ts
receipts/: v1_1_closure_receipt.md
schemas/: intent_artifact.schema.json
scripts/: release_smoke.ps1  release_smoke.sh
scripts/cleanup/: check_repo_layout.py  prune_stale_outputs.py  repo_audit.py
src/sr8/: __init__.py  cli.py
tests/: test_ac5_fixture_count.py  test_ac7_multi_derivative.py  test_adapter_registry.py  test_api_auth_hooks.py  test_api_cli_settings_parity.py  test_api_compile_security.py  test_api_contracts.py  test_api_error_mapping.py  test_api_smoke.py  test_async_job_contracts.py  test_badge_contracts.py  test_bedrock_nonlive_fallback.py  test_bedrock_readiness_reporting.py  test_bedrock_request_normalization.py  test_bedrock_runtime.py  test_bedrock_runtime_smoke.py  test_benchmark_cli.py  test_breadth_registries.py  test_canonical_schema_contracts.py  test_catalog_concurrency.py  test_chat_compile_to_canonical.py  test_cli_compile.py  test_cli_inspect.py  test_cli_smoke.py  test_cli_validate.py  test_code_task_graph_profile.py  test_compile_happy_path.py  test_compile_route_truth.py  test_concurrency_under_load.py  test_derivative_record_semantics.py  test_diff_classifiers.py  test_diff_engine.py  test_diff_semantics.py  test_docs_commands.py  test_env_file_wiring.py  test_eval_harness.py  test_eval_scoring.py  test_examples_roundtrip.py  test_extraction_adapter_registry.py  test_extraction_confidence.py  (+72 more)
tests/chaos/: test_malformed_input_matrix.py
tests/e2e/: test_hardening_gauntlet.py
tests/fixtures/: ambiguous_request.txt  compiled_plan_artifact.json  compiled_prd_artifact.json  compiled_research_artifact.json  founder_generic.md  input_founder_ask.md  input_json_payload.json  input_product_concept.txt  input_yaml_payload.yaml  product_prd.md  repo_audit_request.md  stored_artifact_sample.json  stored_derivative_sample.json
tests/replay/: test_compile_replay_matrix.py
(+821 files in other folders)
